extract products' Url and add share function and website button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
     <string name="NA">NA</string>
     <string name="last_update_date_is">Latest update: on </string>
     <string name="text_for_first_run">Sorry! Products\' information needs to be downloaded</string>
+    <string name="is_your_favourite">is your favourite?</string>
+    <string name="product_image">product_image</string>
 </resources>
