--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="text_for_first_run">Sorry! Products\' information needs to be downloaded</string>
     <string name="is_your_favourite">is your favourite?</string>
     <string name="product_image">product_image</string>
+    <string name="facebook_app_id">444563632567800</string>
 </resources>
