--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="is_your_favourite">is your favourite?</string>
     <string name="product_image">product_image</string>
     <string name="facebook_app_id">444563632567800</string>
+    <string name="search_hint">Enter a product name</string>
 </resources>
